--- a/flutter_bluetooth_serial-master/pubspec.yaml
+++ b/flutter_bluetooth_serial-master/pubspec.yaml
@@ -23,3 +23,7 @@ flutter:
       android:
         package: io.github.edufolly.flutterbluetoothserial
         pluginClass: FlutterBluetoothSerialPlugin
+
+assets:
+  - assets/image/
+
